<resources>
    <string name="app_name">Go_Jobs</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_page">Login Page</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_welcome_to_xpress_job_the_only_way_to_get_your_dream_job_easily">hello welcome to Go jobs the only way to get your dream job easily</string>
    <string name="register">Register</string>
    <string name="confpass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="title_activity_home_screen">Home_screen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Jobs</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_interviews">interviews</string>
    <string name="tab_text_1">Job Applicants</string>
    <string name="tab_text_2">Companies</string>
    <string name="title_activity_jobs">jobs</string>
    <string name="title_activity_new_job">NewJob</string>
    <string name="select_company">Select Company</string>
    <string name="login">Login</string>
</resources>