<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

   >

    <ImageSwitcher
        android:layout_width="match_parent"
        android:background="@drawable/work"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:id="@+id/imageswitcher"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100sp"
        android:text="@string/hello_welcome_to_xpress_job_the_only_way_to_get_your_dream_job_easily"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingHorizontal="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100sp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/previous"
            android:layout_gravity="center"
            android:layout_marginHorizontal="65dp"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>