<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/interview" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="25sp"
        android:layout_marginTop="25sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="25sp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25sp"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="30dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25sp"
        android:layout_marginHorizontal="25sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25sp"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@drawable/ic_baseline_mail_24"
        android:drawablePadding="30dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25sp"
        android:layout_marginHorizontal="25sp"/>

    <EditText
        android:id="@+id/createpassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25sp"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confpass"
        android:textSize="25sp"
        android:layout_marginTop="25sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="25sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25sp"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        tools:ignore="SpeakableTextPresentCheck" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50sp"

        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:layout_marginTop="25sp"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textSize="25sp"
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/Register"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account ?"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_marginHorizontal="25sp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/teal_700"
            android:id="@+id/signin"/>
    </LinearLayout>



</LinearLayout>
</ScrollView>