<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewApplicant"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout

    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
    android:orientation="vertical">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_gravity="center">
            <TextView
                android:id="@+id/CompanyChoose"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:layout_marginVertical="10dp"
                android:textColor="@color/white"
                android:text="Choose  image"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_cloud_upload_24"
                android:id="@+id/UploadApplicantImage"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/teal_700"
                />
        </LinearLayout>
    <ImageView
        android:id="@+id/ApplicantView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corners"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your Name"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:text="Nguh Prince"
            android:id="@+id/ApplicantName"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="no"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter City"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="no"
            android:inputType="textPersonName"
            android:text="Yaounde"
            tools:ignore="LabelFor"
            android:id="@+id/ApplicantCity"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Country"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:text="Cameroon"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="no"
            android:inputType="textPersonName"
            tools:ignore="LabelFor"
            android:id="@+id/ApplicantCountry"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Email"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="300dp"
            android:id="@+id/ApplicantEmail"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="no"
            android:text="example@gmail.com"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter  Phone"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:text="85939859398"
            android:autofillHints="no"
            android:inputType="phone"
            tools:ignore="LabelFor"
            android:id="@+id/ApplicantPhone"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25sp"
        android:layout_marginHorizontal="25sp"/>

    <EditText
        android:id="@+id/ApplicantPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="password"
        android:layout_marginHorizontal="10sp"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confpass"
        android:textSize="25sp"
        android:layout_marginTop="25sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10sp"/>

    <EditText
        android:id="@+id/ApplicantConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="password"
        android:layout_marginHorizontal="25sp"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        tools:ignore="SpeakableTextPresentCheck" />



    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register Applicant"
            android:id="@+id/addApplicant"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_700"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account ?"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginHorizontal="25sp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/teal_700"
            android:id="@+id/Applicantsignin"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>